--- a/logistics/test/Ocean.html
+++ b/logistics/test/Ocean.html
@@ -21,8 +21,8 @@
         <div class="container flex-lg-row flex-nowrap align-items-center">
           <div class="navbar-brand w-100">
             <a href="./index.html">
-              <img class="logo-dark" src="./assets/img/LogisticsHorizontal.png" srcset="./assets/img/LogisticsHorizontal.png 2x" alt="" />
-              <img class="logo-light" src="./assets/img/LogisticsHorizontal.png" srcset="./assets/img/LogisticsHorizontal.png 2x" alt="" />
+              <img class="logo-dark" src="./assets/img/LogisticsHorizontal.png"  alt="Repremar Logistics Logo" />
+              <img class="logo-light" src="./assets/img/LogisticsHorizontal.png"  alt="Repremar Logistics Logo" />
         
             </a>
           </div>
