se suben muchos cambios referentes a redes sociales, etc

--- a/logistics/test/green_es.html
+++ b/logistics/test/green_es.html
@@ -23,9 +23,9 @@
           <div class="container flex-lg-row flex-nowrap align-items-center">
             <div class="navbar-brand w-100">
               <a href="./index.html">
-                <img class="logo-dark" src="./assets/img/LogisticsHorizontal.png" srcset="./assets/img/LogisticsHorizontal.png 2x" alt="Repremar Logistics Logo" />
-                <img class="logo-light" src="./assets/img/LogisticsHorizontalBlanco.png" srcset="./assets/img/LogisticsHorizontalBlanco.png 2x" alt="Repremar Logistics Logo" />
-              </a>
+                <img class="logo-dark" src="./assets/img/LogisticsHorizontal.png"  alt="Repremar Logistics Logo" />
+                <img class="logo-light" src="./assets/img/LogisticsHorizontal.png"  alt="Repremar Logistics Logo" />
+               </a>
             </div>
             <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
               <div class="offcanvas-header d-lg-none">
