--- a/logistics/test/aboutLogistics.html
+++ b/logistics/test/aboutLogistics.html
@@ -21,9 +21,8 @@
         <div class="container flex-lg-row flex-nowrap align-items-center">
           <div class="navbar-brand w-100">
             <a href="./index.html">
-              <img class="logo-dark" src="./assets/img/LogisticsHorizontal.png" srcset="./assets/img/LogisticsHorizontal.png 2x" alt="" />
-              <img class="logo-light" src="./assets/img/LogisticsHorizontal.png" srcset="./assets/img/LogisticsHorizontal.png 2x" alt="" />
-        
+              <img class="logo-dark" src="./assets/img/LogisticsHorizontal.png"  alt="Repremar Logistics Logo" />
+              <img class="logo-light" src="./assets/img/LogisticsHorizontal.png"  alt="Repremar Logistics Logo" />
             </a>
           </div>
           <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
@@ -42,6 +41,8 @@
                     <li class="nav-item"><a class="dropdown-item" href="./Ocean.html"">Ocean</a></li>
                     <li class="nav-item"><a class="dropdown-item" href="./Air.html"">Air</a></li>
                     <li class="nav-item"><a class="dropdown-item" href="./Land.html"">Land</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="./container.html"">Containers</a></li>
+
                     <li class="nav-item"><a class="dropdown-item" href="./Project.html"">Project Cargo</a></li>
                     <li class="nav-item"><a class="dropdown-item" href="https://www.talfir.com.uy/"">Warehousing</a></li>
 
@@ -82,7 +83,7 @@
                 <a class="nav-link dropdown-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">En</a>
                 <ul class="dropdown-menu">
                   <li class="nav-item"><a class="dropdown-item" href="#">En</a></li>
-                  <li class="nav-item"><a class="dropdown-item" href="index_es.html">Es</a></li>
+                  <li class="nav-item"><a class="dropdown-item" href="aboutLogistics_es.html">Es</a></li>
                 </ul>
               </li>
               <li class="nav-item d-none d-md-block">
@@ -116,7 +117,7 @@
           <div class="widget mb-8">
             <h4 class="widget-title text-white mb-3">Contact Info</h4>
             <address> Misiones 1372, 6th Floor <br /> Montevideo, Uruguay </address>
-            <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /> 00 (+598) 2916 9416
+            <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /> <a href="tel:+59829169416">+598 2916 9416</a> 
           </div>
           <!-- /.widget -->
           <div class="widget mb-8">
@@ -492,35 +493,7 @@
             <!-- /.widget -->
           </div>
           <!-- /column -->
-          <div class="col-md-12 col-lg-3">
-            <div class="widget">
-              <h4 class="widget-title text-white mb-3">Our Newsletter</h4>
-              <p class="mb-5">Subscribe to our newsletter to get our news & deals delivered to you.</p>
-              <div class="newsletter-wrapper">
-                <!-- Begin Mailchimp Signup Form -->
-                <div id="mc_embed_signup2">
-                  <form action="https://elemisfreebies.us20.list-manage.com/subscribe/post?u=aa4947f70a475ce162057838d&amp;id=b49ef47a9a" method="post" id="mc-embedded-subscribe-form2" name="mc-embedded-subscribe-form" class="validate dark-fields" target="_blank" novalidate>
-                    <div id="mc_embed_signup_scroll2">
-                      <div class="mc-field-group input-group form-floating">
-                        <input type="email" value="" name="EMAIL" class="required email form-control" placeholder="Email Address" id="mce-EMAIL2">
-                        <label for="mce-EMAIL2">Email Address</label>
-                        <input type="submit" value="Join" name="subscribe" id="mc-embedded-subscribe2" class="btn btn-primary ">
-                      </div>
-                      <div id="mce-responses2" class="clear">
-                        <div class="response" id="mce-error-response2" style="display:none"></div>
-                        <div class="response" id="mce-success-response2" style="display:none"></div>
-                      </div> <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                      <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ddc180777a163e0f9f66ee014_4b1bcfa0bc" tabindex="-1" value=""></div>
-                      <div class="clear"></div>
-                    </div>
-                  </form>
-                </div>
-                <!--End mc_embed_signup-->
-              </div>
-              <!-- /.newsletter-wrapper -->
-            </div>
-            <!-- /.widget -->
-          </div>
+         
           <!-- /column -->
         </div>
         <!--/.row -->
