--- a/logistics/test/quote.html
+++ b/logistics/test/quote.html
@@ -20,8 +20,8 @@
         <div class="container flex-lg-row flex-nowrap align-items-center">
           <div class="navbar-brand w-100">
             <a href="./index.html">
-              <img class="logo-dark" src="./assets/img/LogisticsHorizontal.png" srcset="./assets/img/LogisticsHorizontal.png 2x" alt="Repremar Logistics Logo" />
-              <img class="logo-light" src="./assets/img/LogisticsHorizontalBlanco.png" srcset="./assets/img/LogisticsHorizontalBlanco.png 2x" alt="Repremar Logistics Logo" />
+              <img class="logo-dark" src="./assets/img/LogisticsHorizontal.png"  alt="Repremar Logistics Logo" />
+              <img class="logo-light" src="./assets/img/LogisticsHorizontal.png"  alt="Repremar Logistics Logo" />
             </a>
           </div>
           <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
@@ -40,6 +40,8 @@
                     <li class="nav-item"><a class="dropdown-item" href="./Ocean.html"">Ocean</a></li>
                     <li class="nav-item"><a class="dropdown-item" href="./Air.html"">Air</a></li>
                     <li class="nav-item"><a class="dropdown-item" href="./Land.html"">Land</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="./container.html"">Containers</a></li>
+
                     <li class="nav-item"><a class="dropdown-item" href="./Project.html"">Project Cargo</a></li>
                     <li class="nav-item"><a class="dropdown-item" href="https://www.talfir.com.uy/"">Warehousing</a></li>
 
@@ -60,11 +62,11 @@
               <!-- /.navbar-nav -->
               <div class="offcanvas-footer d-lg-none">
                 <div>
-                  <a href="mailto:first.last@email.com" class="link-inverse">info.logistics@repremar.com</a>
-                  <br /> 00 (+598) 2916 9416 <br />
+                  <a href="mailto:info.logistics@repremar.com" class="link-inverse">info.logistics@repremar.com</a>
+                  <br/><a href="tel:+59829169416">+598 2916 9416</a>  <br/>
                   <nav class="nav social social-white mt-4">
-                    <a href="#"><i class="uil uil-linkedin"></i></a>
-                    <a href="#"><i class="uil uil-instagram"></i></a>
+                    <a href="https://www.instagram.com/repremarlogistics/"><i class="uil uil-instagram"></i></a>
+                    <a href="https://www.linkedin.com/company/repremar-logistics"><i class="uil uil-linkedin"></i></a>
                   </nav>
                   <!-- /.social -->
                 </div>
@@ -80,7 +82,7 @@
                 <a class="nav-link dropdown-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">En</a>
                 <ul class="dropdown-menu">
                   <li class="nav-item"><a class="dropdown-item" href="#">En</a></li>
-                  <li class="nav-item"><a class="dropdown-item" href="#">Es</a></li>
+                  <li class="nav-item"><a class="dropdown-item" href="quote_es.html">Es</a></li>
                 </ul>
               </li>
               <li class="nav-item d-lg-none">
