se agregan en español

--- a/logistics/test/Project.html
+++ b/logistics/test/Project.html
@@ -257,8 +257,9 @@
                 document.write(new Date().getUTCFullYear());
               </script> Repremar Logistics. <br class="d-none d-lg-block" />All rights reserved.</p>
             <nav class="nav social social-white">
-              <a href="#"><i class="uil uil-linkedin"></i></a>
-              <a href="#"><i class="uil uil-instagram"></i></a>
+              <a href="https://www.instagram.com/repremarlogistics/"><i class="uil uil-instagram"></i></a>
+              <a href="https://www.linkedin.com/company/repremar-logistics"><i class="uil uil-linkedin"></i></a>
+         
             </nav>
               <!-- /.social -->
             </div>
