--- a/logistics/test/aboutLogistics.html
+++ b/logistics/test/aboutLogistics.html
@@ -225,7 +225,7 @@
       <div class="container py-14 py-md-16">
         <div class="row gx-lg-8 gx-xl-12 gy-10 mb-14 mb-md-16 align-items-center">
           <div class="col-lg-7">
-            <figure><img class="w-auto" src="./assets/img/photos/oceanfreights.jpg" srcset="./assets/img/photos/oceanfreights.jpg 2x" alt="" /></figure>
+            <figure><img class="w-auto" src="./assets/img/qa_2024.png"  alt="" /></figure>
           </div>
           <!--/column -->
           <div class="col-lg-5">
