--- a/logistics/test/aboutLogistics_es.html
+++ b/logistics/test/aboutLogistics_es.html
@@ -41,6 +41,8 @@
                     <li class="nav-item"><a class="dropdown-item" href="./Ocean.html"">Ocean</a></li>
                     <li class="nav-item"><a class="dropdown-item" href="./Air.html"">Air</a></li>
                     <li class="nav-item"><a class="dropdown-item" href="./Land.html"">Land</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="./container.html"">Containers</a></li>
+
                     <li class="nav-item"><a class="dropdown-item" href="./Project.html"">Project Cargo</a></li>
                     <li class="nav-item"><a class="dropdown-item" href="https://www.talfir.com.uy/"">Warehousing</a></li>
 
@@ -61,13 +63,11 @@
               <!-- /.navbar-nav -->
               <div class="offcanvas-footer d-lg-none">
                 <div>
-                  <a href="mailto:first.last@email.com" class="link-inverse">info@email.com</a>
-                  <br /> 00 (123) 456 78 90 <br />
+                  <a href="mailto:info.logistics@repremar.com" class="link-inverse">info.logistics@repremar.com</a>
+                  <br/><a href="tel:+59829169416">+598 2916 9416</a>  <br/>
                   <nav class="nav social social-white mt-4">
-                    <a href="#"><i class="uil uil-twitter"></i></a>
-                    <a href="#"><i class="uil uil-facebook-f"></i></a>
-                    <a href="#"><i class="uil uil-linkedin"></i></a>
-                    <a href="#"><i class="uil uil-instagram"></i></a>
+                    <a href="https://www.instagram.com/repremarlogistics/"><i class="uil uil-instagram"></i></a>
+                    <a href="https://www.linkedin.com/company/repremar-logistics"><i class="uil uil-linkedin"></i></a>
                   </nav>
                   <!-- /.social -->
                 </div>
@@ -83,7 +83,7 @@
                 <a class="nav-link dropdown-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">En</a>
                 <ul class="dropdown-menu">
                   <li class="nav-item"><a class="dropdown-item" href="#">En</a></li>
-                  <li class="nav-item"><a class="dropdown-item" href="#">Es</a></li>
+                  <li class="nav-item"><a class="dropdown-item" href="aboutLogistics_es.html">Es</a></li>
                 </ul>
               </li>
               <li class="nav-item d-none d-md-block">
@@ -117,16 +117,16 @@
           <div class="widget mb-8">
             <h4 class="widget-title text-white mb-3">Contact Info</h4>
             <address> Misiones 1372, 6th Floor <br /> Montevideo, Uruguay </address>
-            <a href="mailto:first.last@email.com">info.logistics@repremar.com</a><br /> 00 (+598) 2916 9416
+            <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /> <a href="tel:+59829169416">+598 2916 9416</a> 
           </div>
           <!-- /.widget -->
           <div class="widget mb-8">
             <h4 class="widget-title text-white mb-3">Learn More</h4>
             <ul class="list-unstyled">
-              <li><a href="#">Our Story</a></li>
-              <li><a href="#">Terms of Use</a></li>
+              <li><a href="aboutLogistics.html">Our Story</a></li>
+              <li><a href="terms.html">Terms of Use</a></li>
               <li><a href="#">Privacy Policy</a></li>
-              <li><a href="#">Contact Us</a></li>
+              <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
           <!-- /.widget -->
@@ -225,7 +225,7 @@
       <div class="container py-14 py-md-16">
         <div class="row gx-lg-8 gx-xl-12 gy-10 mb-14 mb-md-16 align-items-center">
           <div class="col-lg-7">
-            <figure><img class="w-auto" src="./assets/img/photos/teamwork.jpg" srcset="./assets/img/photos/teamwork.jpg 2x" alt="" /></figure>
+            <figure><img class="w-auto" src="./assets/img/qa_2024.png"  alt="" /></figure>
           </div>
           <!--/column -->
           <div class="col-lg-5">
@@ -266,7 +266,7 @@
         <!--/.row -->
         <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
           <div class="col-lg-7 order-lg-2">
-            <figure><img class="w-auto" src="./assets/img/photos/trust.jpg" srcset="./assets/img/photos/trust.jpg 2x" alt="" /></figure>
+            <figure><img class="w-auto" src="./assets/img/photos/craneloadingcargo.jpg" srcset="./assets/img/photos/craneloadingcargo.jpg 2x" alt="" /></figure>
           </div>
           <!--/column -->
           <div class="col-lg-5">
@@ -409,7 +409,7 @@
       <div class="container py-14 py-md-16">
         <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
           <div class="col-lg-7">
-            <figure><img class="w-auto" src="./assets/img/illustrations/contact.jpg" srcset="./assets/img/illustrations/contact.jpg 2x" alt="" /></figure>
+            <figure><img class="w-auto" src="./assets/img/photos/contactoLogisticsBarco.png" srcset="./assets/img/photos/contactoLogisticsBarco.png 2x" alt="" /></figure>
           </div>
           <!--/column -->
           <div class="col-lg-5">
@@ -430,7 +430,7 @@
               </div>
               <div>
                 <h5 class="mb-1">Phone</h5>
-                <p>00 (+598) 2916 9416</p>
+                <p><a href="tel:+59829169416">+598 2916 9416</a></p>
               </div>
             </div>
             <div class="d-flex flex-row">
@@ -462,8 +462,8 @@
                 document.write(new Date().getUTCFullYear());
               </script> Repremar Logistics. <br class="d-none d-lg-block" />All rights reserved.</p>
             <nav class="nav social social-white">
-              <a href="#"><i class="uil uil-linkedin"></i></a>
-              <a href="#"><i class="uil uil-instagram"></i></a>
+              <a href="https://www.instagram.com/repremarlogistics/"><i class="uil uil-instagram"></i></a>
+              <a href="https://www.linkedin.com/company/repremar-logistics"><i class="uil uil-linkedin"></i></a>
             </nav>
               <!-- /.social -->
             </div>
@@ -474,7 +474,7 @@
             <div class="widget">
               <h4 class="widget-title text-white mb-3">Get in Touch</h4>
               <address class="pe-xl-15 pe-xxl-17">Misiones 1372, 6th floor, Montevideo, Uruguay</address>
-              <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /> 00 (+598) 2916 9416
+              <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /> <a href="tel:+59829169416">+598 2916 9416</a>
             </div>
             <!-- /.widget -->
           </div>
@@ -484,44 +484,16 @@
               <h4 class="widget-title text-white mb-3">Learn More</h4>
               <ul class="list-unstyled  mb-0">
                 <li><a href="aboutLogistics.html">About Us</a></li>
-                <li><a href="#">Our Story</a></li>
+                <li><a href="aboutLogistics.html">Our Story</a></li>
                 <li><a href="Project.html">Projects</a></li>
-                <li><a href="#">Terms of Use</a></li>
+                <li><a href="terms.html">Terms of Use</a></li>
                 <li><a href="#">Privacy Policy</a></li>
               </ul>
             </div>
             <!-- /.widget -->
           </div>
           <!-- /column -->
-          <div class="col-md-12 col-lg-3">
-            <div class="widget">
-              <h4 class="widget-title text-white mb-3">Our Newsletter</h4>
-              <p class="mb-5">Subscribe to our newsletter to get our news & deals delivered to you.</p>
-              <div class="newsletter-wrapper">
-                <!-- Begin Mailchimp Signup Form -->
-                <div id="mc_embed_signup2">
-                  <form action="https://elemisfreebies.us20.list-manage.com/subscribe/post?u=aa4947f70a475ce162057838d&amp;id=b49ef47a9a" method="post" id="mc-embedded-subscribe-form2" name="mc-embedded-subscribe-form" class="validate dark-fields" target="_blank" novalidate>
-                    <div id="mc_embed_signup_scroll2">
-                      <div class="mc-field-group input-group form-floating">
-                        <input type="email" value="" name="EMAIL" class="required email form-control" placeholder="Email Address" id="mce-EMAIL2">
-                        <label for="mce-EMAIL2">Email Address</label>
-                        <input type="submit" value="Join" name="subscribe" id="mc-embedded-subscribe2" class="btn btn-primary ">
-                      </div>
-                      <div id="mce-responses2" class="clear">
-                        <div class="response" id="mce-error-response2" style="display:none"></div>
-                        <div class="response" id="mce-success-response2" style="display:none"></div>
-                      </div> <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                      <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ddc180777a163e0f9f66ee014_4b1bcfa0bc" tabindex="-1" value=""></div>
-                      <div class="clear"></div>
-                    </div>
-                  </form>
-                </div>
-                <!--End mc_embed_signup-->
-              </div>
-              <!-- /.newsletter-wrapper -->
-            </div>
-            <!-- /.widget -->
-          </div>
+         
           <!-- /column -->
         </div>
         <!--/.row -->
