--- a/logistics/test/index_es.html
+++ b/logistics/test/index_es.html
@@ -11,7 +11,7 @@
   <link rel="shortcut icon" href="./assets/img/favicon.png">
   <link rel="stylesheet" href="./assets/css/plugins.css">
   <link rel="stylesheet" href="./assets/css/style.css">
-  <link rel="stylesheet" href="./assets/css/colors/purple.css">
+  <link rel="stylesheet" href="./assets/css/colors/green.css">
   <link rel="preload" href="./assets/css/fonts/urbanist.css" as="style" onload="this.rel='stylesheet'">
 </head>
 
@@ -23,9 +23,9 @@
           <div class="container flex-lg-row flex-nowrap align-items-center">
             <div class="navbar-brand w-100">
               <a href="./index.html">
-                <img class="logo-dark" src="./assets/img/LogisticsHorizontal.png"  alt="Repremar Logistics Logo" />
-                <img class="logo-light" src="./assets/img/LogisticsHorizontal.png"  alt="Repremar Logistics Logo" />
-               </a>
+                <img class="logo-dark" src="./assets/img/LogisticsHorizontal.png" alt="Repremar Logistics Logo" />
+                <img class="logo-light" src="./assets/img/LogisticsHorizontalBlanco.png"  alt="Repremar Logistics Logo Blanco" />
+              </a>
             </div>
             <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
               <div class="offcanvas-header d-lg-none">
@@ -44,10 +44,8 @@
                       <li class="nav-item"><a class="dropdown-item" href="./Air.html"">Air</a></li>
                       <li class="nav-item"><a class="dropdown-item" href="./Land.html"">Land</a></li>
                       <li class="nav-item"><a class="dropdown-item" href="./container.html"">Containers</a></li>
-
                       <li class="nav-item"><a class="dropdown-item" href="./Project.html"">Project Cargo</a></li>
                       <li class="nav-item"><a class="dropdown-item" href="https://www.talfir.com.uy/"">Warehousing</a></li>
-
                     </ul>
                   </li>
                   <li class="nav-item dropdown">
@@ -86,7 +84,7 @@
                   <a class="nav-link dropdown-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">En</a>
                   <ul class="dropdown-menu">
                     <li class="nav-item"><a class="dropdown-item" href="#">En</a></li>
-                    <li class="nav-item"><a class="dropdown-item" href="#">Es</a></li>
+                    <li class="nav-item"><a class="dropdown-item" href="index_es.html">Es</a></li>
                   </ul>
                 </li>
                 <li class="nav-item d-none d-md-block">
@@ -116,7 +114,7 @@
             <div class="widget mb-8">
               <h4 class="widget-title text-white mb-3">Contact Info</h4>
               <address> Misiones 1372, 6th Floor <br /> Montevideo, Uruguay </address>
-              <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /> 00 (+598) 2916 9416
+              <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /> <a href="tel:+59829169416">+598 2916 9416</a>
             </div>
             <!-- /.widget -->
             <div class="widget mb-8">
@@ -132,8 +130,8 @@
             <div class="widget">
               <h4 class="widget-title text-white mb-3">Follow Us</h4>
               <nav class="nav social social-white">
-                <a href="#"><i class="uil uil-instagram"></i></a>
-                <a href="#"><i class="uil uil-linkedin"></i></a>
+                <a href="https://www.instagram.com/repremarlogistics/"><i class="uil uil-instagram"></i></a>
+                <a href="https://www.linkedin.com/company/repremar-logistics"><i class="uil uil-linkedin"></i></a>
               </nav>
               <!-- /.social -->
             </div>
@@ -285,7 +283,7 @@
           <!--/.row -->
           <div class="row gx-lg-8 gx-xl-12 gy-10">
             <div class="col-lg-7 order-lg-2">
-              <figure><img class="w-auto" src="./assets/img/photos/trust2.jpg" srcset="./assets/img/photos/trust2.jpg 2x" alt="" /></figure>
+              <figure><img class="w-auto" src="./assets/img/photos/oceanfreights5.jpg" srcset="./assets/img/photos/oceanfreights5.jpg 2x" alt="" /></figure>
             </div>
             <!--/column -->
             <div class="col-lg-5">
@@ -459,28 +457,19 @@
       <!-- /section -->
     </div>
     <!-- /.content-wrapper -->
-    <footer class="bg-dark section-frame">
-      <div class="container pb-13 pb-md-15">
-        <div class="card image-wrapper bg-full bg-image bg-overlay mt-n50p mx-md-5" data-image-src="./assets/img/photos/bg27.jpg">
-          <div class="card-body p-6 p-md-11 d-lg-flex flex-row align-items-lg-center justify-content-md-between text-center text-lg-start">
-            <h3 class="display-4 mb-6 mb-lg-0 pe-lg-10 pe-xl-5 pe-xxl-18 text-white">We are trusted by over 1000+ clients. Join them by using our services and grow your business.</h3>
-            <a href="#" class="btn btn-lg btn-white rounded mb-0 text-nowrap">Join Us</a>
-          </div>
-          <!--/.card-body -->
-        </div>
-        <!--/.card -->
-        <div class="text-inverse mx-md-5 mt-n15 mt-lg-0">
-          <div class="row gy-6 gy-lg-0">
-            <div class="col-md-4 col-lg-3">
-              <div class="widget">
-                <img class="mb-4" src="./assets/img/LogisticsHorizontalBlanco.png" srcset="./assets/img/LogisticsHorizontalBlanco.png 2x" alt="" />
-                <p class="mb-4">© <script>
-                    document.write(new Date().getUTCFullYear());
-                  </script> Repremar Logistics. <br class="d-none d-lg-block" />All rights reserved.</p>
-                <nav class="nav social social-white">
-                  <a href="https://www.instagram.com/repremarlogistics/"><i class="uil uil-instagram"></i></a>
-                  <a href="https://www.linkedin.com/company/repremar-logistics"><i class="uil uil-linkedin"></i></a>
-                </nav>
+    <footer class="bg-dark text-inverse">
+      <div class="container py-13 py-md-15">
+        <div class="row gy-6 gy-lg-0">
+          <div class="col-md-4 col-lg-3">
+            <div class="widget">
+              <img class="mb-4" src="./assets/img/LogisticsHorizontalBlanco.png" srcset="./assets/img/LogisticsHorizontalBlanco.png 2x" alt="" />
+              <p class="mb-4">© <script>
+                  document.write(new Date().getUTCFullYear());
+                </script> Repremar Logistics. <br class="d-none d-lg-block" />All rights reserved.</p>
+              <nav class="nav social social-white">
+                <a href="https://www.instagram.com/repremarlogistics/"><i class="uil uil-instagram"></i></a>
+                <a href="https://www.linkedin.com/company/repremar-logistics"><i class="uil uil-linkedin"></i></a>
+              </nav>
                 <!-- /.social -->
               </div>
               <!-- /.widget -->
@@ -490,7 +479,7 @@
               <div class="widget">
                 <h4 class="widget-title text-white mb-3">Get in Touch</h4>
                 <address class="pe-xl-15 pe-xxl-17">Misiones 1372, 6th floor, Montevideo, Uruguay</address>
-                <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /> 00 (+598) 2916 9416
+                <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /> <a href="tel:+59829169416">+598 2916 9416</a>
               </div>
               <!-- /.widget -->
             </div>
@@ -500,8 +489,7 @@
                 <h4 class="widget-title text-white mb-3">Learn More</h4>
                 <ul class="list-unstyled  mb-0">
                   <li><a href="aboutLogistics.html">About Us</a></li>
-                  <li><a href="#">Our Story</a></li>
-                  <li><a href="Project.html">Projects</a></li>
+                  <li><a href="projects.html">Projects</a></li>
                   <li><a href="terms.html">Terms of Use</a></li>
                   <li><a href="#">Privacy Policy</a></li>
                 </ul>
@@ -509,35 +497,7 @@
               <!-- /.widget -->
             </div>
             <!-- /column -->
-            <div class="col-md-12 col-lg-3">
-              <div class="widget">
-                <h4 class="widget-title text-white mb-3">Our Newsletter</h4>
-                <p class="mb-5">Subscribe to our newsletter to get our news & deals delivered to you.</p>
-                <div class="newsletter-wrapper">
-                  <!-- Begin Mailchimp Signup Form -->
-                  <div id="mc_embed_signup2">
-                    <form action="https://elemisfreebies.us20.list-manage.com/subscribe/post?u=aa4947f70a475ce162057838d&amp;id=b49ef47a9a" method="post" id="mc-embedded-subscribe-form2" name="mc-embedded-subscribe-form" class="validate dark-fields" target="_blank" novalidate>
-                      <div id="mc_embed_signup_scroll2">
-                        <div class="mc-field-group input-group form-floating">
-                          <input type="email" value="" name="EMAIL" class="required email form-control" placeholder="Email Address" id="mce-EMAIL2">
-                          <label for="mce-EMAIL2">Email Address</label>
-                          <input type="submit" value="Join" name="subscribe" id="mc-embedded-subscribe2" class="btn btn-primary ">
-                        </div>
-                        <div id="mce-responses2" class="clear">
-                          <div class="response" id="mce-error-response2" style="display:none"></div>
-                          <div class="response" id="mce-success-response2" style="display:none"></div>
-                        </div> <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ddc180777a163e0f9f66ee014_4b1bcfa0bc" tabindex="-1" value=""></div>
-                        <div class="clear"></div>
-                      </div>
-                    </form>
-                  </div>
-                  <!--End mc_embed_signup-->
-                </div>
-                <!-- /.newsletter-wrapper -->
-              </div>
-              <!-- /.widget -->
-            </div>
+            
             <!-- /column -->
           </div>
           <!--/.row -->
