se arregla quote

--- a/logistics/test/index.html
+++ b/logistics/test/index.html
@@ -195,10 +195,10 @@
               <div class="row gx-lg-8 gx-xl-12 gy-11 text-center d-flex align-items-end">
                 <div class="col-sm-8 col-md-6 col-lg-4 mx-auto">
                   <div class="px-md-3 px-lg-0 px-xl-3">
-                    <div class="icon btn btn-block btn-lg btn-soft-purple pe-none mb-5"> <i class="uil uil-ship"></i> </div>
+                    <div class="icon btn btn-block btn-lg btn-soft-leaf pe-none mb-5"> <i class="uil uil-ship"></i> </div>
                     <h3 class="fs-22">LOGISTICS & INTERNATIONAL TRANSPORT</h3>
-                    <p class="mb-2">Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget. Fusce dapibus tellus.</p>
-                    <a href="#" class="more hover link-purple">Learn More</a>
+                    <p class="mb-2">Managing the efficient movement of goods across borders, ensuring timely delivery, compliance with regulations, and optimizing costs through strategic planning and technology. We are specialist on Ocean, Air, terrestrial and intermodal freights. We use state of the art technology solutions</p>
+                    <a href="Ocean.html" class="more hover link-purple">Learn More</a>
                   </div>
                   <!--/.px -->
                 </div>
@@ -207,36 +207,37 @@
                   <div class="px-md-3 px-lg-0 px-xl-3">
                     <div class="icon btn btn-block btn-lg btn-soft-leaf pe-none mb-5"> <i class="uil uil-truck-loading"></i> </div>
                     <h3 class="fs-22">INFRASTRUCTURE & WAREHOUSING</h3>
-                    <p class="mb-2">Maecenas faucibus mollis interdum. Vivamus sagittis lacus vel augue laoreet. Sed posuere consectetur.</p>
-                    <a href="#" class="more hover link-leaf">Learn More</a>
+                    <p class="mb-2">Focuses on the physical facilities and systems needed to store, manage, and distribute goods efficiently. This includes the construction and maintenance of warehouses, as well as the technology and processes used to ensure safe, organized, and timely storage and retrieval of products.</p>
+                    <a href="https://www.talfir.com.uy" class="more hover link-leaf">Learn More</a>
                   </div>
                   <!--/.px -->
                 </div>
                 <!--/column -->
                 <div class="col-sm-8 col-md-6 col-lg-4 mx-auto">
                   <div class="px-md-3 px-lg-0 px-xl-3">
-                    <div class="icon btn btn-block btn-lg btn-soft-pink pe-none mb-5"> <i class="uil uil-box"></i> </div>
+                    <div class="icon btn btn-block btn-lg btn-soft-leaf pe-none mb-5"> <i class="uil uil-box"></i> </div>
                     <h3 class="fs-22">CUSTOM OPERATIONS & REGIONAL DISTRIBUTION</h3>
-                    <p class="mb-2">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna scelerisque.</p>
-                    <a href="#" class="more hover link-pink">Learn More</a>
+                    <p class="mb-2">Managing the compliance and clearance of goods through customs, ensuring they meet all legal and regulatory requirements. It also includes the strategic distribution of products within specific regions to optimize delivery times and costs, ensuring goods reach their final destination efficiently.</p>
+                    <a href="Air.html" class="more hover link-pink">Learn More</a>
                   </div>
                   <!--/.px -->
                 </div><!--/column -->
                 <div class="col-sm-8 col-md-6 col-lg-4 mx-auto">
                   <div class="px-md-3 px-lg-0 px-xl-3">
-                    <div class="icon btn btn-block btn-lg btn-soft-pink pe-none mb-5"> <i class="uil uil-lightbulb"></i> </div>
+                    <div class="icon btn btn-block btn-lg btn-soft-leaf pe-none mb-5"> <i class="uil uil-lightbulb"></i> </div>
                     <h3 class="fs-22">PROJECT CARGO MANAGEMENT</h3>
-                    <p class="mb-2">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna scelerisque.</p>
-                    <a href="#" class="more hover link-pink">Learn More</a>
+                    <p class="mb-2">Specializes in handling large, complex, or high-value shipments that require careful planning, customized logistics solutions, and coordination. This includes transporting oversized or heavy equipment, often for industrial or infrastructure projects, with attention to route planning, special permits, and safety measures to ensure the successful delivery of the cargo.</p>
+                    <a href="Project.html" class="more hover link-pink">Learn More</a>
                   </div>
                   <!--/.px -->
                 </div>
                 <div class="col-sm-8 col-md-6 col-lg-4 mx-auto">
                   <div class="px-md-3 px-lg-0 px-xl-3">
-                    <div class="icon btn btn-block btn-lg btn-soft-green pe-none mb-5"> <i class="uil uil-redo"></i> </div>
+                    <div class="icon btn btn-block btn-lg btn-soft-leaf pe-none mb-5"> <i class="uil uil-redo"></i> </div>
                     <h3 class="fs-22">Go Green</h3>
-                    <p class="mb-2">Our Commitment to Environmental Sustainability.</p>
-                    <a href="#" class="more hover link-pink">Learn More</a>
+                    <p class="mb-2">iInvolve adopting eco-friendly practices, such as using renewable energy, optimizing transportation to reduce emissions, implementing sustainable packaging, and partnering with environmentally conscious suppliers to minimize the overall environmental impact. We are investing in carbon offset programs to balance out the emissions produced during transportation, such as reforestation projects or renewable energy initiatives.
+                    </p>
+                    <a href="green.html" class="more hover link-pink">Learn More</a>
                   </div>
                   <!--/.px -->
                 </div>
@@ -258,18 +259,20 @@
               <h3 class="display-4 mb-6">LOGISTICS AND TRANSPORTATION / SERVICES.</h3>
               <div class="row gy-4">
                 <div class="col-md-6">
-                  <h4><span class="text-primary">1.</span> INLAND FREIGHTS</h4>
-                  <p class="mb-0">Regarding domestic transport, we coordinate and pick up the cargo, in the case of exports, or deliver it, in the case of imports, from / at the address indicated by the client.
-                    .</p>
+                  <h4><span class="text-primary">1.</span> OCEAN FREIGHTS, FULL & CONSOLIDATED</h4>
+                  <p class="mb-0">We have a reliable network of experienced international agents for the coordination of our ocean shipments, both for FCL and LCL cargo which allows us to participate in most ocean services, being market leader in many of them.</p>
                 </div>
                 <div class="col-md-6">
                   <h4><span class="text-primary">2.</span> AIR FREIGHTS</h4>
                   <p class="mb-0">All destinations and all origins covered with the invaluable support from our Operations Center at Carrasco International Airport in Montevideo.  We offer our services and advice for the handling and packaging of all kinds of goods.</p>
                 </div>
                 <div class="col-md-6">
-                  <h4><span class="text-primary">3.</span> OCEAN FREIGHTS, FULL & CONSOLIDATED</h4>
-                  <p class="mb-0">We have a reliable network of experienced international agents for the coordination of our ocean shipments, both for FCL and LCL cargo which allows us to participate in most ocean services, being market leader in many of them.</p>
+                  <h4><span class="text-primary">3.</span> INLAND FREIGHTS</h4>
+                  <p class="mb-0">Regarding domestic transport, we coordinate and pick up the cargo, in the case of exports, or deliver it, in the case of imports, from / at the address indicated by the client.
+                    .</p>
                 </div>
+
+
                 <div class="col-md-6">
                   <h4><span class="text-primary">4.</span> CARGO INSURANCE</h4>
                   <p class="mb-0">We offer the best insurance coverage for intermodal transportation. This service is provided by Aktiv-Assekuranz.</p>
