--- a/logistics/test/technology.html
+++ b/logistics/test/technology.html
@@ -152,7 +152,6 @@
             <h1 class="display-1 mb-5 mx-md-10 mx-lg-0">Our platform is effortless and powerful with <br /><span class="typer text-primary text-nowrap" data-delay="100" data-words="easy usage,fast,secure, 24/7"></span><span class="cursor text-primary" data-owner="typer"></span>access</h1>
             <p class="lead fs-lg mb-7">Achieve your goals. Have all your information, time, tracking, expenses and invoices in one place.</p>
             <div class="d-flex justify-content-center justify-content-lg-start" data-cues="slideInDown" data-group="page-title-buttons" data-delay="900">
-              <span><a class="btn btn-lg btn-primary rounded me-2">Get Started</a></span>
             </div>
           </div>
           <!-- /column -->
@@ -240,12 +239,12 @@
               <div class="col-lg-6">
                 <h2 class="mb-3">Easy Usage</h2>
                 <p>The platform's intuitive design allows users to navigate and access essential features with minimal effort, reducing the need for extensive training. Its straightforward interface enables quick data entry, real-time tracking, and easy report generation. This simplicity ensures that both tech-savvy and non-technical users can efficiently manage their shipments, leading to faster adoption and smoother operations.</p>
-                <ul class="icon-list bullet-bg bullet-soft-yellow">
+                <ul class="icon-list bullet-bg bullet-soft-green">
                   <li><i class="uil uil-check"></i>The platform is designed for easy navigation, allowing users to quickly access and manage key features.</li>
                   <li><i class="uil uil-check"></i>Minimal training is required, enabling teams to start using the platform efficiently from day one.</li>
                   <li><i class="uil uil-check"></i>Simplified workflows reduce the chance of errors and save time, improving overall productivity.</li>
                 </ul>
-                <a href="#" class="btn btn-yellow mt-2">Do you want to know more?</a>
+                <a href="contact.html" class="btn btn-green mt-2">Do you want to know more?</a>
               </div>
               <!--/column -->
             </div>
@@ -253,131 +252,6 @@
           </div>
         </div>
         <!-- /.tab-content -->
-      </div>
-      <!-- /.container -->
-    </section>
-    <!-- /section -->
-    <section class="wrapper bg-light">
-      <div class="container py-14 py-md-17">
-        <div class="row gy-10 gy-sm-13 gx-lg-3 align-items-center mb-14 mb-md-19">
-          <div class="col-md-8 col-lg-6 position-relative">
-            <a><i class="icn-caret-right"></i></a>
-            <div class="shape rounded bg-soft-primary rellax d-md-block" data-rellax-speed="0" style="bottom: -1.8rem; right: -1.5rem; width: 85%; height: 90%; "></div>
-            <figure class="rounded"><img src="./assets/img/photos/trace3.png" srcset="./assets/img/photos/trace3 2x" alt=""></figure>
-          </div>
-          <!--/column -->
-          <div class="col-lg-5 col-xl-4 offset-lg-1">
-            <h2 class="fs-15 text-uppercase text-muted mb-3">How It Works?</h2>
-            <h3 class="display-4 mb-7">Here are the 3 working steps on success.</h3>
-            <div class="d-flex flex-row mb-5">
-              <div>
-                <img src="./assets/img/icons/lineal/shield.svg" class="svg-inject icon-svg icon-svg-md text-yellow me-5" alt="" />
-              </div>
-              <div>
-                <h4 class="mb-1">Secure Tracking</h4>
-                <p class="mb-0">The platform connects with shipping lines through APIs, retrieving real-time GPS data from vessels to display the container's current location.</p>
-              </div>
-            </div>
-            <div class="d-flex flex-row mb-5">
-              <div>
-                <img src="./assets/img/icons/lineal/clock-3.svg" class="svg-inject icon-svg icon-svg-md text-green me-5" alt="" />
-              </div>
-              <div>
-                <h4 class="mb-1">Updates</h4>
-                <p class="mb-0">The platform updates dates by continuously syncing with the shipping line's systems, recalculating estimated arrival times based on real-time tracking data and any delays or progress detected in the container's journey.</p>
-              </div>
-            </div>
-            <div class="d-flex flex-row">
-              <div>
-                <img src="./assets/img/icons/lineal/bell.svg" class="svg-inject icon-svg icon-svg-md text-red me-5" alt="" />
-              </div>
-              <div>
-                <h4 class="mb-1">Always up to date</h4>
-                <p class="mb-0">The platform notifies customers of date changes by sending automated alerts via email, SMS, Whatsapp or in-app notifications, triggered whenever real-time tracking data indicates a significant update in the container's estimated arrival time.</p>
-              </div>
-            </div>
-          </div>
-          <!--/column -->
-        </div>
-      </div>
-      <!-- /.container -->
-    </section>
-    <!-- /section -->
-    <section class="wrapper bg-soft-primary">
-      <div class="container py-14 py-md-17">
-        <div class="row">
-          <div class="col-lg-11 col-xxl-10 mx-auto text-center">
-            <h2 class="fs-15 text-uppercase text-muted mb-3">FAQ</h2>
-            <h3 class="display-4 mb-10 px-lg-12 px-xl-10 px-xxl-15">If you don't see an answer to your question, you can send us an email from our contact form.</h3>
-          </div>
-          <!--/column -->
-        </div>
-        <!--/.row -->
-        <div class="row">
-          <div class="col-lg-7 mx-auto">
-            <div id="accordion-3" class="accordion-wrapper">
-              <div class="card accordion-item shadow-lg">
-                <div class="card-header" id="accordion-heading-3-1">
-                  <button class="collapsed" data-bs-toggle="collapse" data-bs-target="#accordion-collapse-3-1" aria-expanded="false" aria-controls="accordion-collapse-3-1">How do I get the service?</button>
-                </div>
-                <!-- /.card-header -->
-                <div id="accordion-collapse-3-1" class="collapse" aria-labelledby="accordion-heading-3-1" data-bs-target="#accordion-3">
-                  <div class="card-body">
-                    <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec sed odio dui. Cras justo odio, dapibus ac facilisis.</p>
-                  </div>
-                  <!-- /.card-body -->
-                </div>
-                <!-- /.collapse -->
-              </div>
-              <!-- /.card -->
-              <div class="card accordion-item shadow-lg">
-                <div class="card-header" id="accordion-heading-3-2">
-                  <button class="collapsed" data-bs-toggle="collapse" data-bs-target="#accordion-collapse-3-2" aria-expanded="false" aria-controls="accordion-collapse-3-2">Are there any discounts?</button>
-                </div>
-                <!-- /.card-header -->
-                <div id="accordion-collapse-3-2" class="collapse" aria-labelledby="accordion-heading-3-2" data-bs-target="#accordion-3">
-                  <div class="card-body">
-                    <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec sed odio dui. Cras justo odio, dapibus ac facilisis.</p>
-                  </div>
-                  <!-- /.card-body -->
-                </div>
-                <!-- /.collapse -->
-              </div>
-              <!-- /.card -->
-              <div class="card accordion-item shadow-lg">
-                <div class="card-header" id="accordion-heading-3-3">
-                  <button class="collapsed" data-bs-toggle="collapse" data-bs-target="#accordion-collapse-3-3" aria-expanded="false" aria-controls="accordion-collapse-3-3">Do you offer a free trial?</button>
-                </div>
-                <!-- /.card-header -->
-                <div id="accordion-collapse-3-3" class="collapse" aria-labelledby="accordion-heading-3-3" data-bs-target="#accordion-3">
-                  <div class="card-body">
-                    <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec sed odio dui. Cras justo odio, dapibus ac facilisis.</p>
-                  </div>
-                  <!-- /.card-body -->
-                </div>
-                <!-- /.collapse -->
-              </div>
-              <!-- /.card -->
-              <div class="card accordion-item shadow-lg">
-                <div class="card-header" id="accordion-heading-3-4">
-                  <button class="collapsed" data-bs-toggle="collapse" data-bs-target="#accordion-collapse-3-4" aria-expanded="false" aria-controls="accordion-collapse-3-4">How do I reset my Account password?</button>
-                </div>
-                <!-- /.card-header -->
-                <div id="accordion-collapse-3-4" class="collapse" aria-labelledby="accordion-heading-3-4" data-bs-target="#accordion-3">
-                  <div class="card-body">
-                    <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec sed odio dui. Cras justo odio, dapibus ac facilisis.</p>
-                  </div>
-                  <!-- /.card-body -->
-                </div>
-                <!-- /.collapse -->
-              </div>
-              <!-- /.card -->
-            </div>
-            <!-- /.accordion-wrapper -->
-          </div>
-          <!-- /column -->
-        </div>
-        <!-- /.row -->
       </div>
       <!-- /.container -->
     </section>
