--- a/logistics/test/quote.html
+++ b/logistics/test/quote.html
@@ -21,7 +21,7 @@
           <div class="navbar-brand w-100">
             <a href="./index.html">
               <img class="logo-dark" src="./assets/img/LogisticsHorizontal.png"  alt="Repremar Logistics Logo" />
-              <img class="logo-light" src="./assets/img/LogisticsHorizontal.png"  alt="Repremar Logistics Logo" />
+              <img class="logo-light" src="./assets/img/LogisticsHorizontalBlanco.png"  alt="Repremar Logistics Logo" />
             </a>
           </div>
           <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
@@ -228,7 +228,7 @@
                   </div>
                   <div>
                     <h5 class="mb-1">Phone</h5>
-                    <p>00 (+598) 29169416</p>
+                    <p><a href="tel:+59829169416">+598 2916 9416</a> </p>
                   </div>
                 </div>
                 <div class="d-flex flex-row">
@@ -253,12 +253,7 @@
       <!-- /.container -->
     </section>
     <!-- /section -->
-    <section class="wrapper bg-light">
-      <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13087.86252429304!2d-56.20595!3d-34.907312!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f7f80e3682da7%3A0x367c00b7ae30455d!2sREPREMAR%20Logistics!5e0!3m2!1ses!2suy!4v1724100745028!5m2!1ses!2suy" style="width:100%; height: 500px; border:0" allowfullscreen></iframe>
-      </div>
-      <!-- /.map -->
-    </section>
+    
     <!-- /section -->
   </div>
   <!-- /.content-wrapper -->
@@ -267,16 +262,13 @@
       <div class="row gy-6 gy-lg-0">
         <div class="col-md-4 col-lg-3">
           <div class="widget">
-            <img class="mb-4" src="./assets/img/logo-light.png" srcset="./assets/img/logo-light@2x.png 2x" alt="" />
+            <img class="mb-4" src="./assets/img/LogisticsHorizontalBlanco.png"  alt="" />
             <p class="mb-4">© <script>
                 document.write(new Date().getUTCFullYear());
-              </script> Sandbox. <br class="d-none d-lg-block" />All rights reserved.</p>
+              </script> Repremar Logistics. <br class="d-none d-lg-block" />All rights reserved.</p>
             <nav class="nav social social-white">
-              <a href="#"><i class="uil uil-twitter"></i></a>
-              <a href="#"><i class="uil uil-facebook-f"></i></a>
-              <a href="#"><i class="uil uil-dribbble"></i></a>
-              <a href="#"><i class="uil uil-instagram"></i></a>
-              <a href="#"><i class="uil uil-youtube"></i></a>
+              <a href="https://www.instagram.com/repremarlogistics/"><i class="uil uil-instagram"></i></a>
+              <a href="https://www.linkedin.com/company/repremar-logistics"><i class="uil uil-linkedin"></i></a>
             </nav>
             <!-- /.social -->
           </div>
@@ -286,8 +278,8 @@
         <div class="col-md-4 col-lg-3">
           <div class="widget">
             <h4 class="widget-title text-white mb-3">Get in Touch</h4>
-            <address class="pe-xl-15 pe-xxl-17">Moonshine St. 14/05 Light City, London, United Kingdom</address>
-            <a href="mailto:#">info@email.com</a><br /> 00 (123) 456 78 90
+            <address class="pe-xl-15 pe-xxl-17">Misiones 1372, 6th floor, Montevideo, Uruguay</address>
+            <a href="mailto:info.logistics@repremar.com">info.logistics@repremar.com</a><br /><a href="tel:+59829169416">+598 2916 9416</a>
           </div>
           <!-- /.widget -->
         </div>
@@ -296,45 +288,16 @@
           <div class="widget">
             <h4 class="widget-title text-white mb-3">Learn More</h4>
             <ul class="list-unstyled  mb-0">
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Our Story</a></li>
-              <li><a href="#">Projects</a></li>
-              <li><a href="#">Terms of Use</a></li>
+              <li><a href="aboutLogistics.html">About Us</a></li>
+              <li><a href="Project.html">Projects</a></li>
+              <li><a href="terms.html">Terms of Use</a></li>
               <li><a href="#">Privacy Policy</a></li>
             </ul>
           </div>
           <!-- /.widget -->
         </div>
         <!-- /column -->
-        <div class="col-md-12 col-lg-3">
-          <div class="widget">
-            <h4 class="widget-title text-white mb-3">Our Newsletter</h4>
-            <p class="mb-5">Subscribe to our newsletter to get our news & deals delivered to you.</p>
-            <div class="newsletter-wrapper">
-              <!-- Begin Mailchimp Signup Form -->
-              <div id="mc_embed_signup2">
-                <form action="https://elemisfreebies.us20.list-manage.com/subscribe/post?u=aa4947f70a475ce162057838d&amp;id=b49ef47a9a" method="post" id="mc-embedded-subscribe-form2" name="mc-embedded-subscribe-form" class="validate dark-fields" target="_blank" novalidate>
-                  <div id="mc_embed_signup_scroll2">
-                    <div class="mc-field-group input-group form-floating">
-                      <input type="email" value="" name="EMAIL" class="required email form-control" placeholder="Email Address" id="mce-EMAIL2">
-                      <label for="mce-EMAIL2">Email Address</label>
-                      <input type="submit" value="Join" name="subscribe" id="mc-embedded-subscribe2" class="btn btn-primary ">
-                    </div>
-                    <div id="mce-responses2" class="clear">
-                      <div class="response" id="mce-error-response2" style="display:none"></div>
-                      <div class="response" id="mce-success-response2" style="display:none"></div>
-                    </div> <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ddc180777a163e0f9f66ee014_4b1bcfa0bc" tabindex="-1" value=""></div>
-                    <div class="clear"></div>
-                  </div>
-                </form>
-              </div>
-              <!--End mc_embed_signup-->
-            </div>
-            <!-- /.newsletter-wrapper -->
-          </div>
-          <!-- /.widget -->
-        </div>
+        
         <!-- /column -->
       </div>
       <!--/.row -->
