se arreglan paginas

--- a/logistics/test/Land.html
+++ b/logistics/test/Land.html
@@ -148,8 +148,8 @@
       <div class="container pt-10 pb-19 pt-md-14 pb-md-20 text-center">
         <div class="row">
           <div class="col-md-8 col-lg-7 col-xl-6 col-xxl-5 mx-auto mb-11">
-            <h1 class="display-1 mb-3">Ground transportation, or road freight</h1>
-            <p class="lead px-lg-7 px-xl-7 px-xxl-6">Road freight offers unmatched flexibility, allowing for door-to-door delivery services. It can reach locations that are not accessible by air or sea, making it a critical link in the supply chain.</p>
+            <h1 class="display-1 mb-3">Terrestrial freight</h1>
+            <p class="lead px-lg-7 px-xl-7 px-xxl-6">Terrestrial freight offers unmatched flexibility, allowing for door-to-door delivery services. It can reach locations that are not accessible by air or sea, making it a critical link in the supply chain.</p>
           </div>
           <!-- /column -->
         </div>
