--- a/logistics/test/container.html
+++ b/logistics/test/container.html
@@ -86,9 +86,7 @@
                   <li class="nav-item"><a class="dropdown-item" href="container_es.html">Es</a></li>
                 </ul>
               </li>
-              <li class="nav-item d-none d-md-block">
-                <a href="quote.html" class="btn btn-sm btn-primary rounded">Request a quote</a>
-              </li>
+              
               <li class="nav-item d-lg-none">
                 <button class="hamburger offcanvas-nav-btn"><span></span></button>
               </li>
@@ -125,7 +123,6 @@
             <ul class="list-unstyled">
               <li><a href="aboutLogistics.html">Our Story</a></li>
               <li><a href="terms.html">Terms of Use</a></li>
-              <li><a href="#">Privacy Policy</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
@@ -267,11 +264,15 @@
     </section>
   
     <!-- /section -->
-    
+    <h1 style="text-align:center;">Request a quote</h1>
+
   <section class="wrapper bg-light">
+
   <div class="container py-14 py-md-16">
+
     <div class="row">
       <div class="col-xl-10 mx-auto">
+
         <div class="row gy-10 gx-lg-8 gx-xl-12">
           <div class="col-lg-8">
             <form class="contact-form needs-validation" method="post" action="./assets/php/contact.php" novalidate>
@@ -349,7 +350,7 @@
                   <div class="form-check mb-4">
                     <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
                     <label class="form-check-label" for="invalidCheck">
-                      I agree to <a href="#" class="hover">terms and policy</a>.
+                      I agree to <a href="terms.html" class="hover">terms and policy</a>.
                     </label>
                     <div class="invalid-feedback">
                       You must agree before submitting.
@@ -393,7 +394,7 @@
               </div>
               <div>
                 <h5 class="mb-1">E-mail</h5>
-                <p class="mb-0"><a href="mailto:info.logistics@repremar.com" class="text-body">info.logistics@repremar.com</a></p>
+                <p class="mb-0"><a href="mailto:contenedores@repremar.com" class="text-body">contenedores@repremar.com</a></p>
               </div>
             </div>
           </div>
@@ -446,7 +447,6 @@
                 <li><a href="aboutLogistics.html">About Us</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="terms.html">Terms of Use</a></li>
-                <li><a href="#">Privacy Policy</a></li>
               </ul>
             </div>
             <!-- /.widget -->
