--- a/logistics/test/index.html
+++ b/logistics/test/index.html
@@ -122,7 +122,6 @@
               <ul class="list-unstyled">
                 <li><a href="aboutLogistics.html">Our Story</a></li>
                 <li><a href="terms.html">Terms of Use</a></li>
-                <li><a href="#">Privacy Policy</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
               </ul>
             </div>
@@ -198,7 +197,7 @@
                     <div class="icon btn btn-block btn-lg btn-soft-leaf pe-none mb-5"> <i class="uil uil-ship"></i> </div>
                     <h3 class="fs-22">LOGISTICS & INTERNATIONAL TRANSPORT</h3>
                     <p class="mb-2">Managing the efficient movement of goods across borders, ensuring timely delivery, compliance with regulations, and optimizing costs through strategic planning and technology. We are specialist on Ocean, Air, terrestrial and intermodal freights. We use state of the art technology solutions</p>
-                    <a href="Ocean.html" class="more hover link-purple">Learn More</a>
+                    <a href="Ocean.html" class="more hover link-leaf">Learn More</a>
                   </div>
                   <!--/.px -->
                 </div>
@@ -218,7 +217,7 @@
                     <div class="icon btn btn-block btn-lg btn-soft-leaf pe-none mb-5"> <i class="uil uil-box"></i> </div>
                     <h3 class="fs-22">CUSTOM OPERATIONS & REGIONAL DISTRIBUTION</h3>
                     <p class="mb-2">Managing the compliance and clearance of goods through customs, ensuring they meet all legal and regulatory requirements. It also includes the strategic distribution of products within specific regions to optimize delivery times and costs, ensuring goods reach their final destination efficiently.</p>
-                    <a href="Air.html" class="more hover link-pink">Learn More</a>
+                    <a href="Air.html" class="more hover link-leaf">Learn More</a>
                   </div>
                   <!--/.px -->
                 </div><!--/column -->
@@ -227,7 +226,7 @@
                     <div class="icon btn btn-block btn-lg btn-soft-leaf pe-none mb-5"> <i class="uil uil-lightbulb"></i> </div>
                     <h3 class="fs-22">PROJECT CARGO MANAGEMENT</h3>
                     <p class="mb-2">Specializes in handling large, complex, or high-value shipments that require careful planning, customized logistics solutions, and coordination. This includes transporting oversized or heavy equipment, often for industrial or infrastructure projects, with attention to route planning, special permits, and safety measures to ensure the successful delivery of the cargo.</p>
-                    <a href="Project.html" class="more hover link-pink">Learn More</a>
+                    <a href="Project.html" class="more hover link-leaf">Learn More</a>
                   </div>
                   <!--/.px -->
                 </div>
@@ -237,7 +236,7 @@
                     <h3 class="fs-22">Go Green</h3>
                     <p class="mb-2">iInvolve adopting eco-friendly practices, such as using renewable energy, optimizing transportation to reduce emissions, implementing sustainable packaging, and partnering with environmentally conscious suppliers to minimize the overall environmental impact. We are investing in carbon offset programs to balance out the emissions produced during transportation, such as reforestation projects or renewable energy initiatives.
                     </p>
-                    <a href="green.html" class="more hover link-pink">Learn More</a>
+                    <a href="green.html" class="more hover link-leaf">Learn More</a>
                   </div>
                   <!--/.px -->
                 </div>
@@ -275,7 +274,7 @@
 
                 <div class="col-md-6">
                   <h4><span class="text-primary">4.</span> CARGO INSURANCE</h4>
-                  <p class="mb-0">We offer the best insurance coverage for intermodal transportation. This service is provided by Aktiv-Assekuranz.</p>
+                  <p class="mb-0">We offer the best insurance coverage for intermodal transportation.</p>
                 </div>
                 <!--/column -->
               </div>
@@ -472,7 +471,6 @@
                   <li><a href="aboutLogistics.html">About Us</a></li>
                   <li><a href="projects.html">Projects</a></li>
                   <li><a href="terms.html">Terms of Use</a></li>
-                  <li><a href="#">Privacy Policy</a></li>
                 </ul>
               </div>
               <!-- /.widget -->
