--- a/logistics/test/Land.html
+++ b/logistics/test/Land.html
@@ -124,7 +124,6 @@
             <ul class="list-unstyled">
               <li><a href="aboutLogistics.html">Our Story</a></li>
               <li><a href="terms.html">Terms of Use</a></li>
-              <li><a href="#">Privacy Policy</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
@@ -259,7 +258,7 @@
           <!--/column -->
         </div>
         <!--/.row -->
-        <a href="./quote.html" class="btn btn-sm btn-primary rounded" data-bs-toggle="modal" data-bs-target="#modal-signup">Request a quote</a>
+        <a href="quote.html" class="btn btn-sm btn-primary rounded">Request a quote</a>
             
         <!--/.row -->
       </div>
@@ -304,7 +303,6 @@
                 <li><a href="aboutLogistics.html">About Us</a></li>
                 <li><a href="Project.html">Projects</a></li>
                 <li><a href="terms.html">Terms of Use</a></li>
-                <li><a href="#">Privacy Policy</a></li>
               </ul>
             </div>
             <!-- /.widget -->
