--- a/logistics/test/aboutLogistics.html
+++ b/logistics/test/aboutLogistics.html
@@ -87,7 +87,7 @@
                 </ul>
               </li>
               <li class="nav-item d-none d-md-block">
-                <a href="./quote.html" class="btn btn-sm btn-primary rounded" data-bs-toggle="modal" data-bs-target="#modal-signup">Request a quote</a>
+                <a href="quote.html" class="btn btn-sm btn-primary rounded" data-bs-toggle="modal" data-bs-target="#modal-signup">Request a quote</a>
               </li>
               <li class="nav-item d-lg-none">
                 <button class="hamburger offcanvas-nav-btn"><span></span></button>
@@ -125,7 +125,6 @@
             <ul class="list-unstyled">
               <li><a href="aboutLogistics.html">Our Story</a></li>
               <li><a href="terms.html">Terms of Use</a></li>
-              <li><a href="#">Privacy Policy</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
           </div>
@@ -486,7 +485,6 @@
                 <li><a href="aboutLogistics.html">About Us</a></li>
                 <li><a href="Project.html">Projects</a></li>
                 <li><a href="terms.html">Terms of Use</a></li>
-                <li><a href="#">Privacy Policy</a></li>
               </ul>
             </div>
             <!-- /.widget -->
