--- a/logistics/test/aboutLogistics_es.html
+++ b/logistics/test/aboutLogistics_es.html
@@ -87,7 +87,7 @@
                 </ul>
               </li>
               <li class="nav-item d-none d-md-block">
-                <a href="./quote.html" class="btn btn-sm btn-primary rounded" data-bs-toggle="modal" data-bs-target="#modal-signup">Request a quote</a>
+                <a href="quote.html" class="btn btn-sm btn-primary rounded" data-bs-toggle="modal" data-bs-target="#modal-signup">Request a quote</a>
               </li>
               <li class="nav-item d-lg-none">
                 <button class="hamburger offcanvas-nav-btn"><span></span></button>
