se suben mas personas

--- a/logistics/test/aboutLogistics.html
+++ b/logistics/test/aboutLogistics.html
@@ -417,7 +417,36 @@
                     </nav>
                     <!-- /.social -->
                   </div>
-
+                  <div class="swiper-slide">
+                    <img class="rounded-circle w-20 mx-auto mb-4" src="./assets/img/avatars/pmunoz.jpeg"  alt="Paola Munoz" />
+                    <h4 class="mb-1">Paola Muñoz</h4>
+                    <div class="meta mb-2">Sales</div>
+                    <p class="mb-2">Sales executive.</p>
+                    <nav class="nav social justify-content-center text-center mb-0">
+                      <a href="https://www.linkedin.com/in/paola-margarita-muñoz-pérez-818532166/"><i class="uil uil-linkedin"></i></a>
+                    </nav>
+                    <!-- /.social -->
+                  </div>
+                  <div class="swiper-slide">
+                    <img class="rounded-circle w-20 mx-auto mb-4" src="./assets/img/avatars/mjvega.jpeg"  alt="Maria Jose Vega" />
+                    <h4 class="mb-1">María Jose Vega</h4>
+                    <div class="meta mb-2">CFO</div>
+                    <p class="mb-2">Accounting and RRHH</p>
+                    <nav class="nav social justify-content-center text-center mb-0">
+                      <a href="https://www.linkedin.com/in/maría-josé-vega-etcheverrigaray-b43509275/"><i class="uil uil-linkedin"></i></a>
+                    </nav>
+                    <!-- /.social -->
+                  </div>
+                  <div class="swiper-slide">
+                    <img class="rounded-circle w-20 mx-auto mb-4" src="./assets/img/avatars/naversa.jpeg"  alt="Nicolas Aversa" />
+                    <h4 class="mb-1">Nicolás Aversa</h4>
+                    <div class="meta mb-2">CTO</div>
+                    <p class="mb-2">IT Manager</p>
+                    <nav class="nav social justify-content-center text-center mb-0">
+                      <a href="https://www.linkedin.com/in/nicolasaversa/"><i class="uil uil-linkedin"></i></a>
+                    </nav>
+                    <!-- /.social -->
+                  </div>
                   <!--/.swiper-slide -->
                 </div>
                 <!--/.swiper-wrapper -->
