--- a/logistics/test/marketing.html
+++ b/logistics/test/marketing.html
@@ -169,6 +169,18 @@
             <p class="mb-3">AI Format</p>
             <a href="./marketing/ids/ID_template.ai" class="more hover link-green">Download</a>
           </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="icon btn btn-block btn-lg btn-soft-green pe-none mb-5"> <i class="uil uil-shield-exclamation"></i> </div>
+            <h4>IMO</h4>
+            <p class="mb-3">IMO Classification</p>
+            <a href="./marketing/IMOINGLES.pdf" class="more hover link-green">Download</a>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="icon btn btn-block btn-lg btn-soft-green pe-none mb-5"> <i class="uil uil-shield-exclamation"></i> </div>
+            <h4>QA Policy</h4>
+            <p class="mb-3">Policy pdf</p>
+            <a href="./marketing/Politica de Calidad y Seguridad de la cadena de Suministro de Replog.pdf" class="more hover link-green">Download</a>
+          </div>
           <!--/column -->
         </div>
         <!--/.row -->
