mejora en about

--- a/logistics/test/aboutLogistics.html
+++ b/logistics/test/aboutLogistics.html
@@ -332,7 +332,7 @@
         <div class="row gx-lg-8 gx-xl-12 gy-10 align-items-center">
           <div class="col-lg-4">
             <h2 class="fs-15 text-uppercase text-line text-primary text-center mb-3">Meet the Team</h2>
-            <h3 class="display-5 mb-5">Save your time and money by choosing our professional team.</h3>
+            <h3 class="display-5 mb-5">Meet Our Team of Professionals.</h3>
             <p>Our team is composed of seasoned professionals with years of experience in the freight forwarding and logistics industry. Their deep understanding of the complexities and nuances of global supply chains ensures that your shipments are handled with the highest level of expertise.</p>
           </div>
           <!--/column -->
